[metadata]
name = plover_retro_stroke
keywords = plover
description = Converts the last X translations to their stroke form
long_description = file: README.org
long_description_content_type = text/org

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev8
  PyQt5>=5.5
  
packages =
  plover_retro_stroke

[options.entry_points]
plover.macro =
  retro_stroke = plover_retro_stroke:retro_stroke
